--- a/themes/coo/layout/_partial/header.ejs
+++ b/themes/coo/layout/_partial/header.ejs
@@ -15,7 +15,7 @@
                         <span class="font-sans">K</span>
                     </span>
                 </button>
-                <a href="https://101jc.com/" target="_blank">
+                <a class="text-slate-50 dark:text-slate-300" href="https://101jc.com/" target="_blank">
                     返回主页
                 </a>
 
