--- a/themes/coo/layout/_partial/index/hero.ejs
+++ b/themes/coo/layout/_partial/index/hero.ejs
@@ -2,7 +2,7 @@
     <div class="max-container lg:w-3/4">
         <h1 class="text-4xl md:text-5xl text-slate-50 dark:text-slate-300 leading-relaxed">检测速查手册</h1>
         <h2 class="text-xl md:text-xl text-slate-200 dark:text-slate-300 leading-tight font-extralight tracking-wide text-base mt-6 mb-20">
-            为工程检测人员制作的速查手册，也是为了方便自己整理及查阅相关知识点
+            一站式检测知识点速查，由 <a href="https://101jc.com/" class="text-slate-600 dark:text-slate-300 hover:text-slate-100 hover:dark:text-slate-200">旅者Bin</a> 制作并维护
         </h2>
     </div>
 </section>
