--- a/themes/coo/layout/_partial/header.ejs
+++ b/themes/coo/layout/_partial/header.ejs
@@ -11,26 +11,28 @@
                     </div>
                     <span class="hidden md:inline dark:text-slate-300">搜索</span>
                     <span class="hidden md:inline dark:text-slate-300 md:ml-2 text-sm leading-5 py-0.5 px-1.5 border <%- postPage ? "border-slate-400" : "border-slate-300" %> rounded-md">
-                        <span class="font-sans">⌘</span>
+                        <span class="font-sans" style="font-size: 125%;">⌘</span>
                         <span class="font-sans">K</span>
                     </span>
                 </button>
-                <a class="text-slate-50 dark:text-slate-300" href="https://101jc.com/" target="_blank">
-                    返回主页
-                </a>
 
+                <a href="https://101jc.com/" target="_blank">
+                    <button class="fadeIn inline-flex items-center justify-center flex-shrink-0 h-8 w-8 rounded-full text-gray-900 ml-1 lg:ml-4 dark:text-gray-300 bg-gray-200 dark:bg-gray-900">
+                        <i class="icon-light text-gray-600 dark:text-gray-300 dark:hover:text-white">
+                            <%- icon("home") %>
+                        </i>
+                    </button>
+                </a>
                 <button id="darkMode" class="fadeIn inline-flex items-center justify-center flex-shrink-0 h-8 w-8 rounded-full text-gray-900 ml-1 lg:ml-4 dark:text-gray-300 bg-gray-200 dark:bg-gray-900">
                     <i class="icon-light text-gray-600 dark:text-gray-300 dark:hover:text-white">
                         <%- icon("light") %>
                     </i>
                 </button>
                 <a href="<%- share_link("facebook") %>" target="_blank">
-                    <button type="button"
-                            class="fadeIn inline-flex h-8 w-8 justify-center items-center rounded-full bg-[#4a66ad] text-slate-100 ml-1 lg:ml-4 px-2 md:px-3 py-2 md:hover:opacity-80">
-                        <span class="text-md">
+                    <button class="fadeIn inline-flex items-center justify-center flex-shrink-0 h-8 w-8 rounded-full text-gray-900 ml-1 lg:ml-4 dark:text-gray-300 bg-gray-200 dark:bg-gray-900">
+                        <i class="icon-light text-gray-600 dark:text-gray-300 dark:hover:text-white">
                             <%- icon("github") %>
-                        </span>
-                        <span class="hidden">Facebook</span>
+                        </i>
                     </button>
                 </a>
 
