迁移了图床

--- a/themes/coo/layout/_partial/index/logo.ejs
+++ b/themes/coo/layout/_partial/index/logo.ejs
@@ -2,7 +2,7 @@
     <% if (icon) { %>
         <div class="hidden md:flex justify-center w-10 h-10 md:w-12 md:h-12 text-white p-2 bg-white rounded-full mr-3 text-2xl">
             <div class="self-center">
-                <img src="https://img.101jc.com/img/logo.png!yuantu" />
+                <img src="https://img.101jc.com/img/logo.png" />
             </div>
         </div>
     <% } %>
